@@ -342,8 +342,7 @@
 	"S_USE_IP_ADDRESS"=>			"Use IP address",
 	"S_IP_ADDRESS"=>			"IP address",
 //	"S_USE_THE_HOST_AS_A_TEMPLATE"=>		"Use the host as a template",
-//	"S_USE_TEMPLATES_OF_THIS_HOST"=>	"Use templates of this host",
-	"S_LINK_WITH_HOST"=>			"Link with host",
+	"S_USE_TEMPLATES_OF_THIS_HOST"=>	"Use templates of this host",
 	"S_USE_PROFILE"=>			"Use profile",
 	"S_DELETE_SELECTED_HOST_Q"=>		"Delete selected host?",
 	"S_DELETE_SELECTED_GROUP_Q"=>		"Delete selected group?",
